src/style.css
@font-face {
  font-family: "open-sans";
  src: url("./assets/open-sans-var.woff2");
  font-display: swap;
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --ff-open-sans: "open-sans", Arial, sans-serif;
  --fs: clamp(1rem, 1rem + 0.5vw, 3rem);

  --black: #121212;
  --dark-gray: #282828;
  --white: #fff;
  --blue: #0c4a6e;
  --green: #14532d;
  --red: #991b1b;
  --amber: #fbbf24;

  --btn-size: 3rem;
  --border: 2px solid var(--white);
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

section[data-active="false"] {
  display: none;
}

body {
  font-family: var(--ff-open-sans);
  font-size: var(--fs);
  background-color: var(--black);
  position: relative;
}
a:any-link {
  text-decoration: none;
}
button,
textarea,
select,
option,
input {
  font: inherit;
}
input {
  min-height: 3rem;
  border-radius: 8px;
  border: var(--border);
  padding: 0.5rem;
  min-width: 100%;
}
li {
  list-style: none;
}
button:active {
  transform: scale(1.2);
  transition: transform 0.05s;
}
button.add-task-btn:disabled {
  all: unset;
  border: var(--border);
  padding: 0.6em 2em;
  border-radius: 8px;
  background-color: var(--green);
  opacity: 0.5;
}
.btn-bg {
  min-width: var(--btn-size);
  min-height: var(--btn-size);
  background-size: cover;
  background-color: transparent;
  border: var(--border);
  border-radius: 8px;
}
.main-header {
  position: absolute;
  min-width: 100%;
  display: flex;
  flex-direction: row-reverse;
  justify-content: start;
  align-items: center;
  padding: 1rem;
  gap: 1rem;
  background-color: var(--dark-gray);
}
h1 {
  margin: 0 auto;
  color: var(--white);
}
.main-content {
  padding: 0.5rem;
  transform: translateY(calc(1rem + 3.5em));
  min-height: calc(100vh - 5rem);
  display: flex;
  flex-direction: column;
}
[data-projects="open"] {
  background-image: url("./assets/images/menu.svg");
}
[data-projects="close"] {
  background-image: url("./assets/images/close.svg");
}
[data-projects]:active {
  opacity: 0.1;
  transition: opacity 0.05s ease-in-out;
}
.edit-btn {
  background-image: url("./assets/images/edit.svg");
}
.delete-btn {
  background-image: url("./assets/images/delete.svg");
}
.edit-btn:active {
  background-image: url("./assets/images/edit-hover.svg");
}
.delete-btn:active {
  background-image: url("./assets/images/delete-hover.svg");
}

/* Projects ----------------------------- */

.projects {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 0.5rem;
}
.projects > header {
  padding: 1rem;
  background-color: var(--dark-gray);
  color: var(--white);
  border-radius: 6px;
}
.add-project-form {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  background-color: var(--dark-gray);
  padding: 1.5rem 1rem;
  order: -1;
  border-radius: 6px;
}
.add-project-form p {
  flex: 1;
}
.add-project-btn {
  background-image: url("./assets/images/add.svg");
  background-color: var(--green);
}
.project-list {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 0.5rem;
}
.project-list li {
  background-color: var(--dark-gray);
  padding: 1rem 0.5rem;
  gap: 1rem;
  display: flex;
  justify-content: end;
  align-items: center;
  border-radius: 6px;
}
.project-list li > a {
  flex: 1;
  color: var(--white);
  overflow-x: auto;
  white-space: nowrap;
  padding: 0.4rem 0.5rem;
}
.project-list li button {
  border-color: transparent;
}
.project-list li a:active {
  transform: scaleY(1.2);
  transition: transform 0.05s;
}
li.selected {
  box-shadow: inset -8px 0 0 0 var(--white);
  border-radius: 6px 0 0 6px;
}

/* To-do list --------------------------- */

.todo-list {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 0.5rem;
}
.todo-list > header {
  background-color: var(--dark-gray);
  border-radius: 6px;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  color: var(--white);
}
.todo-list h2 {
  text-align: center;
  overflow-x: auto;
}
.todo-list .btn-container {
  display: flex;
  justify-content: center;
}
.todo-list .add-task-btn {
  padding: 0.6em 2em;
  border-radius: 8px;
  border: var(--border);
  background-color: var(--green);
  color: var(--white);
  font-weight: 700;
}
.task-list {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.task-list li {
  background-color: var(--dark-gray);
  border-radius: 6px;
  display: flex;
  gap: 0.5rem;
  align-items: center;
  padding: 0.5rem;
  color: var(--white);
}
.task-list input {
  min-height: 3rem;
  min-width: 3rem;
  margin-right: 1rem;
}
.task-list label {
  display: flex;
  flex: 1;
  align-items: center;
  overflow-x: auto;
}
.btn-bg.more-btn {
  background-image: url("./assets/images/more.svg");
  border: var(--border);
  transform: none;
}
.dropdown-container {
  position: relative;
  max-height: 3rem;
}
.dropdown-content {
  display: none;
  position: absolute;
  bottom: 0;
  right: 0;
  transform: translateY(100%);
  background-color: var(--dark-gray);
  padding: 0.5rem;
  border-radius: 6px;
  z-index: 1;
}
.dropdown-content button {
  color: var(--white);
  padding: 0.5rem 1rem;
  border-radius: 8px;
  border: var(--border);
}
.drop-view-btn {
  background-color: var(--green);
}
.drop-edit-btn {
  background-color: var(--blue);
}
.drop-delete-btn {
  background-color: var(--red);
}
.dropdown-container:focus-within .dropdown-content {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.completed {
  text-decoration: line-through;
}
label[data-priority="important"] {
  box-shadow: 0 8px 0 0 var(--red);
}
label[data-priority="normal"] {
  box-shadow: 0 8px 0 0 var(--amber);
}
label[data-priority="low"] {
  box-shadow: 0 8px 0 0 var(--blue);
}

@media screen and (min-width: 53em) {
  section.projects {
    display: flex;
  }
  [data-projects] {
    display: none;
  }
  .main-content {
    flex-direction: row;
    gap: 1rem;
    padding: 0.5rem 1rem;
  }
  .project-list li {
    max-width: calc(50vw - 1.5rem);
  }
}

@media (hover: hover) and (pointer: fine) {
  button:hover {
    filter: brightness(1.5);
    cursor: pointer;
  }
  .project-list a:hover {
    box-shadow: 0 5px 0 0 var(--white);
  }
  .project-list .edit-btn:focus-visible,
  .project-list .edit-btn:hover {
    background-image: url("./assets/images/edit-hover.svg");
  }
  .project-list .delete-btn:focus-visible,
  .project-list .delete-btn:hover {
    background-image: url("./assets/images/delete-hover.svg");
  }
}

/* dialogs ------------------------ */

dialog {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: var(--black);
  padding: 0.5rem;
  border-radius: 8px;
  min-width: 19.5rem;
}
dialog h3 {
  overflow-x: auto;
}
dialog::backdrop {
  background-color: var(--white);
  opacity: 0.25;
}
.header {
  background-color: var(--dark-gray);
  padding: 1rem;
  border-radius: 6px;
  color: var(--white);
}
dialog .btn-container {
  padding: 1rem;
  border-radius: 6px;
  background-color: var(--dark-gray);
  display: flex;
  justify-content: end;
  gap: 1rem;
}
.confirm-btn,
.cancel-btn {
  padding: 0.5em 1em;
  border-radius: 8px;
  border: var(--border);
  color: var(--white);
  font-weight: 700;
}
.confirm-btn {
  background-color: var(--blue);
}
.cancel-btn {
  background-color: var(--red);
}
.close-btn {
  background-image: url("./assets/images/close.svg");
  border-radius: 50%;
  background-color: var(--red);
}

/* rename project dialog */

.rename-project-form {
  display: grid;
  gap: 0.5rem;
}

/* delete project dialog */

.delete-project .container {
  display: grid;
  gap: 0.5rem;
}
.delete-project article {
  display: grid;
  gap: 1rem;
  background-color: var(--dark-gray);
  color: var(--white);
  border-radius: 6px;
  padding: 1rem;
  max-width: 50ch;
}

/* add / edit task form body */

dialog textarea {
  overflow-y: auto;
}
.form-body {
  display: grid;
  color: var(--white);
  row-gap: 0.5rem;
}
.form-body p:nth-child(1) {
  grid-area: 1/1/1/3;
}
.form-body p:nth-child(2) {
  grid-area: 2/1/3/3;
  max-height: 5em;
  max-width: 34ch;
}
.form-body label {
  font-weight: 600;
}
.form-body textarea {
  max-width: 100%;
  max-height: 100%;
  padding: 0.5rem;
  border-radius: 8px;
}
.edit-due-date input,
.add-due-date input {
  min-width: auto;
  min-height: auto;
}
.add-due-date,
.add-priority,
.edit-due-date,
.edit-priority {
  display: grid;
  justify-items: center;
  background-color: var(--dark-gray);
  padding: 0.5rem;
  gap: 0.5rem;
}
.add-priority select,
.edit-priority select,
.add-due-date input,
.edit-due-date input {
  font: inherit;
  border-radius: 8px;
  padding: 0.2em 0.5em;
}

/* add task dialog */

.add-task-form {
  display: grid;
  gap: 0.5rem;
}
.add-task-form .header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.add-task-form .btn-container {
  padding: 1rem;
  background-color: var(--dark-gray);
  border-radius: 6px;
  justify-content: center;
}
.add-task-form .add-task-btn {
  background-color: var(--green);
  padding: 0.8em 2em;
  color: var(--white);
  border-radius: 8px;
  border: var(--border);
}

/* edit task dialog */

.edit-task-form {
  display: grid;
  gap: 0.5rem;
}

/* view task dialog */

.view-task > .container {
  display: grid;
  gap: 0.5rem;
}
.view-task .header {
  display: flex;
  gap: 1rem;
  justify-content: space-between;
  align-items: center;
}
.view-task p {
  position: relative;
  padding: 0 0 0.5rem 1rem;
  border-bottom: var(--border);
  border-width: 1px;
}
.view-task span {
  overflow-wrap: anywhere;
}
.view-task p:last-child {
  border-bottom: none;
}
.view-task .task-info {
  position: absolute;
  transform: translate(-1rem, -100%);
  font-size: 0.75em;
}
.view-task article {
  display: grid;
  gap: 2rem;
  background-color: var(--dark-gray);
  color: var(--white);
  padding: 2rem 1rem;
  max-width: 32ch;
  border-radius: 6px;
}

